--- a/employee-manager-services/pom.xml
+++ b/employee-manager-services/pom.xml
@@ -3,37 +3,67 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>com.levi9</groupId>
 		<artifactId>employee-manager-root</artifactId>
 		<version>01.0.0-SNAPSHOT</version>
 	</parent>
-	
+
 	<groupId>com.levi9</groupId>
 	<artifactId>employee-manager-services</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	
+
 	<name>employee-manager-services</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!-- Plugin to create the test jar used by the services module -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<executions>
+						<execution>
+							<goals>
+								<goal>test-jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.3</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<encoding>${project.build.sourceEncoding}</encoding>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<dependencies>
 		<!-- common modules -->
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>employee-manager-model</artifactId>
-			</dependency>
-			
-		 <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>employee-manager-model</artifactId>
-            <version>${project.version}</version>
-            <type>test-jar</type>
-        </dependency>
-        	
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>employee-manager-model</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>employee-manager-model</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+		</dependency>
+
 		<!-- javax validation -->
 		<dependency>
 			<groupId>javax.validation</groupId>
