--- a/employee-manager-services/pom.xml
+++ b/employee-manager-services/pom.xml
@@ -175,5 +175,11 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>2.19</version>
+		</dependency>
 	</dependencies>
 </project>
