--- a/employee-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/employee-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,20 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring/employee-manager-app-config.xml</param-value>
     </context-param>
+    
+    <servlet>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.restfull.exercises</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <url-pattern>/webapi/*</url-pattern>
+    </servlet-mapping>
   
     <!-- Spring MVC -->
     <servlet>
