--- a/employee-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/employee-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,7 @@
         <param-value>/WEB-INF/spring/employee-manager-app-config.xml</param-value>
     </context-param>
     
+    <!-- Jersey REST-->
     <servlet>
         <servlet-name>Jersey Web Application</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
