--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<junit.version>4.12</junit.version>
 		<apache.tomcat.version>8.0.24</apache.tomcat.version>
+		<jersey-container-servlet.version>2.19</jersey-container-servlet.version>
 	</properties>
 
 	<build>
@@ -201,6 +202,12 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.glassfish.jersey.containers</groupId>
+				<artifactId>jersey-container-servlet-core</artifactId>
+				<version>${jersey-container-servlet.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
