--- a/employee-manager-services/pom.xml
+++ b/employee-manager-services/pom.xml
@@ -217,5 +217,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
