--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
-employee-manager-web/.project
+.gitignore
+
+target/
+*.class
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+*.iml
+.idea/
+.gitignore
+.versionsBackup
+.~*
+
+
+######################
+# Windows
+######################
+ 
+# Windows image file caches
+Thumbs.db 
+ 
+# Folder config file
+Desktop.ini
+ 
+######################
+# Eclipse
+######################
+
+.project
+.metadata
+.classpath
+.settings/
+*/.settings/
+*/bin/
+# PDT-specific
+.buildpath
+
+######################
+# Idea
+######################
+ 
+.idea/**
+*.iml
