--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.levi9</groupId>
@@ -26,6 +27,7 @@
 		<jersey-container-servlet.version>2.19</jersey-container-servlet.version>
 		<org.glassfish.jersey.ext.version>2.19</org.glassfish.jersey.ext.version>
 		<jersey-media-json-jackson.version>2.19</jersey-media-json-jackson.version>
+		<powermock-api-mockito>1.6.2</powermock-api-mockito>
 	</properties>
 
 	<build>
@@ -200,10 +202,17 @@
 				<version>${spring.version}</version>
 			</dependency>
 
+			<!-- JUnit -->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
+			</dependency>
+			<!-- Mockito -->
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<version>${powermock-api-mockito}</version>
 			</dependency>
 
 			<dependency>
