added nexus repository

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	
+	<repositories>		
+		<repository>
+			<id>nexus</id>
+			<name>Nexus repository</name>
+			<url>https://repo.levi9.com/content/repositories/levi9-employeemanager.snapshots/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>	
 
 	<dependencyManagement>
 		<dependencies>
