--- a/employee-manager-model/pom.xml
+++ b/employee-manager-model/pom.xml
@@ -162,6 +162,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		
+		<!-- Jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		
 	</dependencies>
 
 
