--- a/employee-manager-container/pom.xml
+++ b/employee-manager-container/pom.xml
@@ -177,5 +177,10 @@
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
