--- a/employee-manager-model/pom.xml
+++ b/employee-manager-model/pom.xml
@@ -183,7 +183,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
