--- a/employee-manager-container/pom.xml
+++ b/employee-manager-container/pom.xml
@@ -167,15 +167,10 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>javax.mail</groupId>
