--- a/employee-manager-model/pom.xml
+++ b/employee-manager-model/pom.xml
@@ -174,15 +174,10 @@
 			<version>2.6.0</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>javax.mail</groupId>
