--- a/pom.xml
+++ b/pom.xml
@@ -346,17 +346,11 @@
 				<scope>runtime</scope>
 			</dependency>
 
-			<dependency>
+<!-- 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-expression</artifactId>
 				<version>4.2.0.RELEASE</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context-support</artifactId>
-				<version>3.2.8.RELEASE</version>
-			</dependency>
+			</dependency> -->
 
 			<dependency>
 				<groupId>javax.mail</groupId>
